Moved rainy__icon.png to images/ folder and updated image path in HTML

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <button onclick="getWeather()">Get Weather</button>
 
       <div class="map-section">
-       <img src="rainy__icon.png" class="circular-img" />
+      <img src="Images/rainy__icon.png" class="circular-img" />
 
         <p id="mapCity">--</p>
       </div>
